// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendSubscription destination action: all fields 1`] = `
Object {
  "context": Object {
    "externalIds": Array [
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "tester11@seg.com",
        "type": "email",
      },
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "+12135618345",
        "type": "phone",
      },
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "abcd12bbfygdbvbvvvv",
        "type": "android_push",
      },
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "abcd12bbfjfsykdbvbvvvvvv",
        "type": "ios_push",
      },
    ],
    "messaging_subscriptions": Array [
      Object {
        "groups": Array [
          Object {
            "name": "marketing",
            "status": "subscribed",
          },
          Object {
            "name": "ProductUpdates",
            "status": "did_not_subscribe",
          },
          Object {
            "name": "newsletter",
            "status": "unsubscribed",
          },
        ],
        "key": "tester11@seg.com",
        "status": "subscribed",
        "type": "EMAIL",
      },
      Object {
        "key": "+12135618345",
        "status": "subscribed",
        "type": "SMS",
      },
      Object {
        "key": "+12135618345",
        "status": "subscribed",
        "type": "WHATSAPP",
      },
      Object {
        "key": "abcd12bbfygdbvbvvvv",
        "status": "unsubscribed",
        "type": "ANDROID_PUSH",
      },
      Object {
        "key": "abcd12bbfjfsykdbvbvvvvvv",
        "status": "subscribed",
        "type": "IOS_PUSH",
      },
    ],
    "messaging_subscriptions_retl": true,
  },
  "integrations": Object {
    "All": false,
  },
  "traits": Object {},
  "userId": "user1234",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendSubscription destination action: required fields 1`] = `
Object {
  "context": Object {
    "externalIds": Array [
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "tester11@seg.com",
        "type": "email",
      },
      Object {
        "collection": "users",
        "encoding": "none",
        "id": "+12135618345",
        "type": "phone",
      },
    ],
    "messaging_subscriptions": Array [
      Object {
        "key": "tester11@seg.com",
        "status": "subscribed",
        "type": "EMAIL",
      },
      Object {
        "key": "+12135618345",
        "status": "subscribed",
        "type": "SMS",
      },
    ],
    "messaging_subscriptions_retl": true,
  },
  "integrations": Object {
    "All": false,
  },
  "traits": Object {},
  "userId": "user12",
}
`;
